<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.india.chemistry.Copper_in_Brass_Formula">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/CinB_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="19dp"
            android:text="@string/CinB_header_text" />

        <TextView
            android:id="@+id/CinB_trial1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/CinB_header"
            android:layout_marginTop="18dp"
            android:text="@string/CinB_trial1_text" />

        <TextView
            android:id="@+id/trial1_brass_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/CinB_trial1"
            android:layout_marginTop="26dp"
            android:text="@string/trial_1_brass_weight_text" />

        <EditText
            android:id="@+id/CinB_trial1_weight_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/CinB_header"
            android:layout_alignRight="@+id/CinB_header"
            android:layout_alignTop="@+id/trial1_brass_weight"
            android:layout_toEndOf="@+id/trial1_brass_weight"
            android:layout_toRightOf="@+id/trial1_brass_weight"
            android:hint="W"
            android:inputType="numberSigned|numberDecimal" />

        <TextView
            android:id="@+id/NA2SO3_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/copper_equivalent_trial1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/CinB_normality_input"
            android:text="@string/NA2SO3_volume_text" />

        <EditText
            android:id="@+id/NA2SO3_volume_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/amount_of_copper_result_trial"
            android:layout_alignLeft="@+id/amount_of_copper_result_trial"
            android:layout_alignRight="@+id/amount_of_copper_result_trial"
            android:layout_alignStart="@+id/amount_of_copper_result_trial"
            android:layout_alignTop="@+id/NA2SO3_volume"
            android:hint="V"
            android:inputType="numberSigned|numberDecimal" />

        <TextView
            android:id="@+id/copper_equivalent_trial1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:text="@string/copper_equivalent_text"
            android:textSize="15dp" />

        <Button
            android:id="@+id/copper_equivalent_vcm3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/copper_equivalent_trial1"
            android:layout_marginTop="51dp"
            android:layout_toLeftOf="@+id/CinB_normality_input"
            android:layout_toStartOf="@+id/CinB_normality_input"
            android:onClick="amount_of_copper"
            android:text="@string/amount_of_copper_text" />

        <TextView
            android:id="@+id/amount_of_copper_result_trial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/copper_equivalent_vcm3"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/copper_equivalent_vcm3"
            android:layout_toEndOf="@+id/copper_equivalent_vcm3"
            android:layout_toRightOf="@+id/copper_equivalent_vcm3"
            android:textAlignment="center"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/CinB_normality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/CinB_trial1_weight_input"
            android:text="@string/CinB_normality" />

        <EditText
            android:id="@+id/CinB_normality_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/CinB_trial1_weight_input"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/CinB_trial1_weight_input"
            android:layout_below="@+id/CinB_normality"
            android:hint="N"
            android:inputType="numberSigned|numberDecimal" />

        <Button
            android:id="@+id/percentage_of_copper_trial1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/copper_equivalent_vcm3"
            android:layout_marginTop="28dp"
            android:onClick="percentage"
            android:text="@string/percentage_of_copper_text" />

        <TextView
            android:id="@+id/percentage_of_copper_result_trial1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/percentage_of_copper_trial1"
            android:layout_marginTop="29dp"
            android:text="" />
    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>
